<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <name>Aggregator for Hotel application</name>
    <description>
        This pom is a maven aggregator that contains all application modules.
    </description>

    <groupId>com.punko</groupId>
    <artifactId>Hotel</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>test-db</module>
        <module>model</module>
        <module>dao-api</module>
        <module>dao</module>
        <module>service-api</module>
        <module>service</module>
        <module>web-app</module>
        <module>rest-app</module>
        <module>service-rest</module>
    </modules>

    <distributionManagement>
        <site>
            <id>www.yourcompany.com</id>
            <url>scp://www.yourcompany.com/www/docs/project/</url>
        </site>
    </distributionManagement>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <spring.version>5.3.4</spring.version>
        <logback.version>1.2.3</logback.version>
        <mockito.version>3.8.0</mockito.version>
        <junit.version>5.7.1</junit.version>
        <hamcrest.version>1.3</hamcrest.version>
        <commons-lang3.version>3.8</commons-lang3.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
        <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
        <junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
        <junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
        <hibernate-validator.version>6.1.0.Final</hibernate-validator.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.4.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>test-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>dao-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>service-rest</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>web-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.punko</groupId>
                <artifactId>rest-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--                <artifactId>jackson-databind</artifactId>-->
            <!--                <version>2.12.2</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--                <artifactId>jackson-core</artifactId>-->
            <!--                <version>2.12.2</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.datatype</groupId>-->
            <!--                <artifactId>jackson-datatype-jsr310</artifactId>-->
            <!--                <version>2.11.4</version>-->
            <!--            </dependency>-->


            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.200</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.30</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
                <scope>test</scope>
            </dependency>

            <!--        for more details objects testing -->
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>

            <!--hibernate/hibernate-validator -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--            &lt;!&ndash; Embedded Jetty HTTP Server for testing war application &ndash;&gt;-->
            <!--            <plugin>-->
            <!--                <groupId>org.eclipse.jetty</groupId>-->
            <!--                <artifactId>jetty-maven-plugin</artifactId>-->
            <!--                <version>10.0.1</version>-->
            <!--                <configuration>-->
            <!--                    <webApp>-->
            <!--                        <contextPath>/</contextPath>-->
            <!--                    </webApp>-->
            <!--                    <httpConnector>-->
            <!--                        <port>8080</port>-->
            <!--                    </httpConnector>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <!--            для запуска тестов-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!-- Force alphabetical order to have a reproducible build -->
                    <runOrder>alphabetical</runOrder>
                    <reportsDirectory>${junit.utReportFolder}</reportsDirectory>
                    <excludes>
                        <exclude>**/*IT*</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!--for IT test. Begin only with *IT* name and only for verify action-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- Due to spring-boot repackage, without adding this property test classes are not found
                             See https://github.com/spring-projects/spring-boot/issues/6254 -->
                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                    <!-- Force alphabetical order to have a reproducible build -->
                    <runOrder>alphabetical</runOrder>
                    <reportsDirectory>${junit.itReportFolder}</reportsDirectory>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <includes>
                        <include>**/*IT*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <!--      for javadoc generation-->

            <!--                        need to add site plugin-->
            <!--                        allow to deploy our application on web-server like docs
                                        and to check test coverage, doc coverage -->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
            <!--                <version>3.2.0</version>-->
            <!--                <configuration>-->
            <!--                    <additionalOptions>-package</additionalOptions>-->
            <!--                    <additionalOptions>-Xdoclint:none</additionalOptions>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <goals>-->
            <!--                            <goal>javadoc</goal>-->
            <!--                        </goals>-->
            <!--                        <phase>site</phase>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.9.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.14.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.41</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <configLocation>google_checks.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--    удалить потом весь javadoc?-->
    <reporting>
        <plugins>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
            <!--                <version>3.2.0</version>-->
            <!--                <configuration>-->
            <!--                    <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>-->
            <!--                    <show>public</show>-->
            <!--                </configuration>-->
            <!--                <reportSets>-->
            <!--                    <reportSet>-->
            <!--                        <id>default</id>-->
            <!--                        <reports>-->
            <!--                            <report>javadoc</report>-->
            <!--                        </reports>-->
            <!--                    </reportSet>-->
            <!--                    <reportSet>-->
            <!--                        <id>aggregate</id>-->
            <!--                        <reports>-->
            <!--                            <report>aggregate</report>-->
            <!--                        </reports>-->
            <!--                    </reportSet>-->
            <!--                </reportSets>-->
            <!--            </plugin>-->

            <plugin>
                <!--                look code and highlight rows that plugin doesn't like-->
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.2.2</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                    <!-- Optional directory to put spotbugs xdoc xml report -->
                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
                </configuration>
            </plugin>
            <!--            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <rulesets>
                        <!-- A rule set, that comes bundled with PMD -->
                        <ruleset>/category/java/bestpractices.xml</ruleset>
                        <ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
                        <!-- Custom local file system rule set -->
                        <!--                        <ruleset>d:\rulesets\strings.xml</ruleset>-->
                        <!-- Custom remote rule set accessed via a URL -->
                        <ruleset>
                            https://gitbox.apache.org/repos/asf?p=maven-pmd-plugin.git;a=blob_plain;f=src/main/resources/rulesets/java/maven-pmd-plugin-default.xml;hb=HEAD
                        </ruleset>
                    </rulesets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                    <configLocation>sun_checks.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>